mobsf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobsf
spec:
  selector:
    app: mobsf
  ports:
  - port: 80
    targetPort: 8282
